--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.0",
-        "topthink/think-installer": "^1.0"
+        "topthink/think-installer": "^1.0",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "topthink/framework": "^5.0"
